# InnoLab

./: README.md
Dokumentation/: DAGoPERT_Raspberry-PI-Arcade-Game_Group-26.xlsx
Dokumentation/Inno_Sprints/: 1_Sprint_Review_Protocol_PiArcadeGame.xlsx  2_Sprint_Review_Protocol_PiArcadeGame.xlsx
Inno_Core/: CMakeLists.txt
Inno_Core/src/: CMakeLists.txt  core.cpp  core.h  game.cpp  game.h  libretro.h  pong.cpp  pong.h
Inno_Core/src/Logic/: MainMenu.cpp  MainMenu.h  Timer.cpp  Timer.h
Inno_Sprints/: 2_Sprint_Review_Protocol_PiArcadeGame.xlsx
